--- a/pharmtest.html
+++ b/pharmtest.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Pharmacy</title>
     <link rel="stylesheet" href="testing/pharmstyles.css">
     <link rel="apple-touch-icon" sizes="120x120" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_package_v0.16/favicon-32x32.png">
