--- a/checkout.html
+++ b/checkout.html
@@ -46,7 +46,7 @@
         <p id="totalAmount" class="total-amount">Total: Rs. 0.00</p>
     </section>
 
-    <script src="checkout.js"></script> <!-- Link the new JavaScript file -->
+    <script src="checkout.js"></script> 
 
     <!--Address form-->
     <div class="form-container">
@@ -106,7 +106,7 @@
                 </label>
             </form>
     
-            <!-- Hidden by default -->
+            
             <div id="content1" class="hidden">
                 <label for="Pickupdate">When would you Pick Up?</label>
                 <input type="date" id="Pickupdate" name="Pickupdate" required>
